@@ -1,0 +1,14 @@
+<?php
+/** Austrian German
+ *
+ * @ingroup Language
+ * @file
+ *
+ */
+
+$fallback = 'de';
+
+$messages = array(
+# Dates
+'january' => 'Jänner',
+);
