@@ -1,0 +1,10 @@
+<?php
+/** Swiss Standard German
+ *
+ * @ingroup Language
+ * @file
+ *
+ */
+
+$fallback = 'de';
+$separatorTransformTable = array( ',' => "'", '.' => ',' );
