@@ -120,6 +120,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 MediaWiki supports over 300 languages. Many localisations are updated
 regularly. Below only new and removed languages are listed.
 
+* Austrian German (de-at) (new)
+* Swiss Standard German (de-ch) (new)
 * Literary Chinese (lzh) (new)
 * Võro (vro) (renamed from fiu-vro)
 
